--- a/home.css
+++ b/home.css
@@ -1,6 +1,6 @@
 body{
   height: 100vh;
-
+  font-family: 'Poppins', sans-serif;
   margin: 1rem;
   padding: 0;
   background: rgba(0, 0, 0, 0.795);
@@ -10,21 +10,25 @@ body{
   align-items: center;
 }
 nav{
-  
   display: flex;
   width: 80%;
   justify-content: space-between;
+}
+nav h2{
+  color: yellow;
 }
 #projectHolder{
   display: flex;
   align-items: center;
   justify-content: center;
+  display: none;
 }
 .buttonHolder{
   height: 3rem;
 }
 button{
   border-radius: 5px;
+  font-family: 'Roboto', sans-serif;
 }
 button:hover{
   height: 2rem;
@@ -37,6 +41,10 @@ button:hover{
   top: 25%;
   text-align: center;
   border-radius: 5px;
+  overflow: scroll;
+}
+#projectHolder div::-webkit-scrollbar{
+  display: none;
 }
 
 #project1{
