--- a/mobileDesign.css
+++ b/mobileDesign.css
@@ -46,7 +46,7 @@
  
   }
   #project2 p{ 
-    display: none;
+    display: block;
   }
   #project1:hover, #project2:hover, #project3:hover, #project4:hover{
     height: 10rem;
